# staged-rag-mcp

./: .gitignore  HOWTOUSE.md  LICENSE  README.md  config.yaml  pyproject.toml
scripts/: full_test.py  inspect_state.py  run_eval.py  seed_mock_data.py  test_mcp_search.py  test_search.py
src/staged_rag/: __init__.py  config.py  prompts.py  server.py  service.py  utils.py
src/staged_rag/core/: __init__.py  bm25.py  chunk_manager.py  document_store.py  embeddings.py  file_watcher.py  kb_manager.py  kb_manifest.py  summary_generator.py  vector_index.py
src/staged_rag/embeddings/: __init__.py  azure_openai.py  base.py  configs.py  factory.py  gemini.py  huggingface.py  lmstudio.py  ollama.py  openai.py  together.py
src/staged_rag/logging/: __init__.py  audit.py
src/staged_rag/models/: __init__.py  audit.py  document.py  search.py
src/staged_rag/resources/: __init__.py  providers.py
src/staged_rag/tools/: __init__.py  advanced.py  management.py  metadata.py  observability.py  retrieval.py
tests/: test_agent_flow.py  test_document_store.py  test_embeddings.py  test_tools.py  test_vector_index.py
